# tether-name-python

./: LICENSE  README.md  example.py  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yml
src/tether_name/: __init__.py  client.py  crypto.py  exceptions.py
tests/: test_client.py  test_crypto.py
